# DZ_20

./: groups.json  pyproject.toml  requirements.txt
blogs/: admin.py  models.py  urls.py  views.py
blogs/migrations/: 0001_initial.py  0002_alter_blogs_slug.py
blogs/templates/blogs/: blogs_detail.html  blogs_form.html  blogs_list.html
config/: settings.py  urls.py
data/: data.json
store/: admin.py  forms.py  models.py  services.py  urls.py  views.py
store/management/commands/: fill.py
store/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0003_remove_product_manufactured_at.py
store/templates/: base.html  index.html  product.html
store/templates/includes/: inc_store_menu.html
store/templates/store/: base.html  category_list.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
store/templates/store/includes/: inc_store_menu.html
store/templatetags/: my_tags.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
