[tool.poetry]
name = "dz-20"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"
ipython = "^8.24.0"
pytils = "^0.4.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
python-dotenv = "^1.0.1"
